# auto-docs

./: .gitignore  .gitlab-ci.yml  README.md  dune  eleventy.config.js  flags  index.html  package-lock.json  package.json  search-index.json  search.json
_11ty/: coq-parser.js  coq-parser.test.js  filters.js  mv-parser.js  rocq-converter.js  rocq-converter.test.js
_includes/: base.njk  doc-layout.njk  index-page.njk  sidebar.njk
content/: contributing.md  further-reading.md  index.njk  learn.md  quick-start.md  reference.md  search.json.njk  setup.md  test.v  troubleshooting.md
content/docs/: docs.11tydata.json  docs.11tydata.yaml  dune
content/docs/class_reps/: alt.11tydata.json  alt.v  classes.md  main.11tydata.json  main.v  unions.v
content/docs/common_errors/: missing_type_instances.11tydata.yaml  missing_type_instances.v
content/docs/control_flow/: index.md  loop.11tydata.yaml
content/docs/debugging/: main.11tydata.json  main.v
content/docs/function_basics/: loop.11tydata.json  loop.v  main.11tydata.json  main.v
content/docs/functions/: index.md  verification.11tydata.yaml
content/docs/primitive-reps/: main.11tydata.json  main.v
content/docs/primitive_reps/: main.11tydata.json  main.v
content/docs/rep_hints/: main.11tydata.json  main.v
content/docs/reps/: main.11tydata.json  main.v
content/docs/scaffold/: by_hand.md  default-specs.md  getting-started.md  simple.md
content/docs/simple/: test.11tydata.json  test.v
content/docs/state_basics/: main.11tydata.json  main.v
contributing/: index.html
demo/: index.html
learn/: index.html
(+97 files in other folders)
